fixed dark mode; fixed up CSS design

--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -36,3 +36,7 @@
     transform: rotate(360deg);
   }
 }
+
+main, .navbar {
+  transition: background-color 0.4s ease-in-out, color 0.4s ease-in-out;
+}
